Fixed background color, it was too light.

--- a/css/style.less
+++ b/css/style.less
@@ -78,7 +78,7 @@ a {
 }
 
 #shorturl {
-  background-color: lighten(@alt-color, 60%);
+  background-color: lighten(@alt-color, 55%);
   border: 1px lighten(@alt-color, 50%) solid;
   width: 380px;
   padding: 10px;
